src/test/ui/consts/const-eval/issue-62272.stderr
error[E0658]: `loop` is not allowed in a `const`
  --> $DIR/issue-62272.rs:7:17
   |
LL | const FOO: () = loop { break; };
   |                 ^^^^^^^^^^^^^^^
   |
   = note: see issue #52000 <https://github.com/rust-lang/rust/issues/52000> for more information
   = help: add `#![feature(const_loop)]` to the crate attributes to enable

error[E0658]: `loop` is not allowed in a `const`
  --> $DIR/issue-62272.rs:10:20
   |
LL |     [FOO; { let x; loop { x = 5; break; } x }];
   |                    ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #52000 <https://github.com/rust-lang/rust/issues/52000> for more information
   = help: add `#![feature(const_loop)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
